--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -6,4 +6,8 @@
     display: grid;
     grid-template-columns: repeat(3,1fr);
     gap: 45px;
+    margin: 50px auto;
+}.cart-container{
+    background-color:#FFE0B3;
+    text-align: center;
 }
